--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Suranna&display=swap');
+
+body{
+  font-family: "Suranna";
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
